--- a/painter.html
+++ b/painter.html
@@ -22,7 +22,7 @@ function checkPainter (){
     PainterN = document.getElementById("form1_passw").value
     GuessN = document.getElementById("form1_guessp").value
     
-    out = document.getElementById("result").innerHTML="correct "+good+"  wrong "+oops;
+   
     if(PainterN==GuessN){
         good++;
         out.innerHTML = good
@@ -32,6 +32,7 @@ function checkPainter (){
         out.innerHTML = oops
         alert("Sorry");
     }
+     document.getElementById("result").innerHTML="correct "+good+"  wrong "+oops;
 }
 </script>
 <div class="container">
