--- a/conversions.html
+++ b/conversions.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
+  <link href="/docs/5.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 <head><title>Currency Conversions Page!</title></head>
 <body>
 
-<h2>Sravanthi Thukivakam shows currency conversions</h2>
+<h2 class="display-5 fw-bold text-white">Sravanthi Thukivakam shows currency conversions</h2>
 
 <form>
     <label for="form1_amount">Enter base amount</label>
@@ -12,7 +15,8 @@
     <label for="form1_rate">Enter the conversion rate.</label>
     <input type ="number" id="form1_rate" name="form1_rate" value=35> <br>
 
-    <input type="button" onclick="convert()" value="Show conversions ">
+    <button type="button" class="btn btn-primary btn-lg px-4 gap-3" onclick="convert()">Show conversions </button>
+    
 </form>
 
 
@@ -40,15 +44,18 @@ function convert (){
 </script>
 
 <form>
+     <div class="btn-group btn-group-toggle" data-toggle="buttons">
     <input type="radio" id="average" name="sele" value="mean" onclick="chooseOp()" >
     <label for="average">average</label></br>
+  
   
     <input type="radio" id="max" name="sele" value="maximum" onclick="chooseOp()" >
     <label for="max">maximum</label></br>
   
     <input type="radio" id="min" name="sele" value="minimum" onclick="chooseOp()" >
     <label for="min">minimum</label></br>
-
+    </div>
+ 
 </form>
 <p id="resultRadio">the result for radio button will be displayed here</p>
 
